bookstore/yaml/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookwarehouse
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookbuyer
